--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "build:tailwind": "tailwind build src/tailwind.css -o src/App.css",
-    "watch:tailwind": "chokidar 'src/**/*.css' 'src/**/*.scss' --ignore src/App.css -c 'npm run build:tailwind'",
+    "watch:tailwind": "chokidar 'src/tailwind.css' --ignore src/App.css -c 'npm run build:tailwind'",
     "start": "npm-run-all build:tailwind --parallel watch:tailwind start:react",
     "start:react": "react-scripts start",
     "prebuild": "run-s build:tailwind",
